public/stylesheets/styles.css
/* ============================== */
/* ! Layout for desktop version   */
/* ============================== */


a {
  color: #C00;
}

body {
  background: #f4f4f4 url('images/gray_texture_1.jpg');
  color: #2D3335;
  font-size: 16px;
  line-height: normal;
}

body>header { 
  background: #33363a url('images/header_texture_1.png');
  height: 80px;
  width: 100%;
}

body>header h1 {
  color: #C00; font-weight: bold;
  display: inline-block;
  font-family: ubuntu, helvetica, sans-serif;
  font-size: 60px;
  left: 3px;
  margin: 0;
  position: absolute;
  top: 16px;
}

body>header p {
  color: #EEE;
  margin: 55px 15px 0 0;
  text-align: right;
  vertical-align: text-bottom;
}

nav {
  margin-top: 15px;
  padding: 5px;
}

nav ul {
  border: 3px solid white;
  border-radius: 15px;
  -moz-border-radius: 15px;
  -webkit-border-radius: 15px;
  box-shadow: 0 0 5px #7F7F7F;
  -moz-box-shadow: 0 0 5px #7F7F7F;
  -webkit-box-shadow: 0 0 5px #7F7F7F;
  display: inline-block;
  list-style: none;
  margin: 0;
  padding: 10px 10px;

  /* Generated ith http://www.colorzilla.com/gradient-editor/ */
  background: #E51414; /* old browsers */
  background: -moz-linear-gradient(top, #E51414 2%, #CC0000 100%); /* firefox */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(2%,#E51414), color-stop(100%,#CC0000)); /* webkit */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#E51414', endColorstr='#CC0000',GradientType=0 ); /* ie */
  background: -o-linear-gradient(top, #E51414 2%,#CC0000 100%); /* opera */
}

nav ul > li {
	display: inline-block;
  margin: 0 20px;
}

nav ul a {
  color: white;
  font-family: Verdana;
  font-size: 20px;
  font-weight: normal;
  text-decoration: none;
}

nav ul a:hover {
  color: #FEE;
}

nav hr {
  background-color: #F8D3D3;
  border: none;
  border-radius: 1px;
  -moz-border-radius: 1px;
  -webkit-border-radius: 1px;
  display: inline-block;
  height: 30px;
  left: 20px;
  margin: -25px 0;
  position: relative;
  top: -16px;
  width: 2px;
}

/*
section header {
  border-bottom: 2px solid #2d3335;
  box-shadow: 0 1px 0 0 white;
  -moz-box-shadow: 0 1px 0 0 white;
  -webkit-box-shadow: 0 1px 0 0 white;
}
*/

section header h1 {
  border-bottom: 5px solid #2d3335;
  box-shadow: 0 1px 0 0 white;
  -moz-box-shadow: 0 1px 0 0 white;
  -webkit-box-shadow: 0 1px 0 0 white;
  color: #2d3335;
  display: inline-block;
  margin: 40px 0 -3px 0;
  overflow: visible;
  padding-bottom: 22px;
  position: relative;
  text-shadow: 0 1px white;
}

.row h2 {
  color: #2d3335;
  font-family: Georgia;
  font-size: 25px;
  margin: 20px 0;
  text-shadow: 0 1px white;
}

.row.main {
  border-bottom: 1px solid #d0d0d0;
  box-shadow: 0 1px 0 0 #f7f7f7;
  -moz-box-shadow: 0 1px 0 0 #f7f7f7;
  -webkit-box-shadow: 0 1px 0 0 #f7f7f7;
}

.course-list>:last-child>.row.main {
  box-shadow: none;
  -moz-box-shadow: none;
  -webkit-box-shadow: none;
}

.course-list {
  background-color: #eaeaea;
  border: 1px solid #d3d3d3;
  border-radius: 10px;
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
}

.course-list p {
  margin: 12px 0;
}

.course-list .button p,.course-list .button form {
  display: inline-block;
}

.course-list .first p {
  margin-left: 30px;
}

.course-list .extra {
  background-color: #d4d4d4;
  background: url(images/expander_top_gradient.png) top left repeat-x, url(images/expander_bottom_gradient.png) bottom left repeat-x, #d4d4d4;
  color: #333334;
  font-family: FreeSans;
  font-size: 16px;
  padding-bottom: 5px;
}

.course-list .description p {
  font-family: Calluna;
  font-size: 18px;
  margin: 20px 30px;
  text-shadow: 0 1px #eeeeee;
}

.course-list .course-list {
  margin-left: 2em;
  margin-right: 2em;
}

.course-code, .group-code {
  color: #656565;
  font-family: Verdana;
  font-size: 18px;
  font-weight: bold;
  text-shadow: 0 1px white;
}

.course-name, .group-name {
  color: #656565;
  font-family: Calluna sans;
  font-size: 22px;
  text-shadow: 0 1px white;
}

.course-time {
  color: #656565;
  font-size: 18px;
  text-shadow: 0 1px white;
}

.course-buttons {
  color: #656565;
  font-family: Verdana;
  font-size: 18px;
  text-shadow: 0 1px white;
}

.course_buttons {
  background-color: #b1b1b1;
  border-radius: 5px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  box-shadow: inset 0px 1px 1px #555, 0px 1px 1px #eee;
  -moz-box-shadow: inset 0px 1px 1px #555, 0px 1px 1px #eee;
  -webkit-box-shadow: inset 0px 1px 1px #555, 0px 1px 1px #eee;
  width: 250px;
  margin-top: 7px;
  padding: 4px 12px 6px 12px;
}

.course_buttons em {
  font-family: Helvetica, Arial, sans-serif;
  color: #444;
  display: block;
  float: left;
  margin-top: 1px;
  font-weight: bold;
  font-style: normal;
  font-size: 14px;
}

.course_buttons select {
  width: 180px;
  margin-left: 10px;
}

.course-count, .course-grade {
  color: #8e8e8e;
  font-family: Verdana;
  font-size: 18px;
  text-shadow: 0 1px white;
}

.section-list {
  background-color: #d4d4d4;
}

.section-list .row {
  border-top: 1px solid #e9e9e9;
  box-shadow: 0 -1px 0 0 #a3a3a3;
  -moz-box-shadow: 0 -1px 0 0 #a3a3a3;
  -webkit-box-shadow: 0 -1px 0 0 #a3a3a3;
}

#error, #old-error {
  color: #B00;
}

.landing .row {
  margin-top: 30px;
}

.landing img {
  border: 1px solid #555;
  border-radius: 0;
  -moz-border-radius: 0;
  -webkit-border-radius: 0;
  display: block;
  margin: 15px auto;
}

.landing ul {
  padding-left: 20px;
}

.roundbox {
  border: 1px solid #d3d3d3;
  background-color: #eaeaea;
  border-radius: 10px;
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
  padding: 10px;
}

.roundbox p {
  margin: 10px 0 0 0;
}

ul {
  padding-left: 40px;
}

/* ============================= */
/* ! Layout for mobile version   */
/* ============================= */

@media handheld, only screen and (max-width: 767px) {

  .course-list .first p {
    margin-left: 0;
  }

  .row {
    margin-top: 0px !important;
  }

  .roundbox {
    margin-bottom: 30px;
  }

}

/* ========================================== */
/* ! Provide higher res assets for iPhone 4   */
/* ========================================== */

@media only screen and (-webkit-min-device-pixel-ratio: 2) { 

/* An example of how to override an image with one twice the size for iPhone 4. Specify the original pixel size with background-size.
.download {
background: url(../img/downarrow@2x.png) no-repeat;
background-size: 27px 28px;
}
*/

}

